--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-/etl.py
-/nav
-/okr
-/patient.csv
-/temp
-/test.py
+node_modules
+bower_components
+.DS_Store
+npm-debug.log
+test/
+desktop.ini
+
+# PhpStorm
+.idea/
+
+# Versioning
+.svn/
+.git/
